--- a/LATEX/bibfile.bib
+++ b/LATEX/bibfile.bib
@@ -244,3 +244,39 @@
   HOWPUBLISHED = {http://combustion.berkeley.edu/gri-mech/version30/text30.html. Accessed 01 Jun 2025},
   YEAR   = {1999}
 }
+
+@INPROCEEDINGS{Sheth2008LogarithmicDE,
+  AUTHOR = {P N Sheth and B V Babu},
+  TITLE = {Logarithmic Differential Evolution (LDE) for Optimization of Kinetic Parameters in Pyrolysis of Biomass},
+  BOOKTITLE = {Proceedings of the International Conference on Chemical Engineering},
+  YEAR = {2008},
+  ADDRESS = {India},
+  ORGANIZATION = {International Conference on Chemical Engineering},
+}
+
+% -------------------------------------------------------------
+% Optimization Test Functions
+
+
+@BOOK{More1981TestFunctions,
+  AUTHOR = {J J Mor{\'e} and B S Garbow and K E Hillstrom},
+  TITLE = {Testing Unconstrained Optimization Software},
+  PUBLISHER = {Springer-Verlag},
+  ADDRESS = {Berlin, Germany},
+  YEAR = {1981},
+  SERIES = {Lecture Notes in Computer Science},
+  VOLUME = {189}
+}
+
+@ARTICLE{More1981Algorithm,
+  AUTHOR = {J J Mor{\'e} and B S Garbow and K E Hillstrom},
+  TITLE = {Algorithm 566: FORTRAN Subroutines for Testing Unconstrained Optimization Software},
+  JOURNAL = {ACM Transactions on Mathematical Software},
+  VOLUME = {7},
+  NUMBER = {1},
+  PAGES = {17--41},
+  YEAR = {1981},
+  PUBLISHER = {Association for Computing Machinery}
+}
+
+
